--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "firebase": "^9.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
